# javad-amin.github.io

./: .gitignore  README.md  cv_data.yaml  generate.py  index.html  pyproject.toml  styles.css
templates/: cv_template.html
